--- a/index.html
+++ b/index.html
@@ -103,58 +103,85 @@
       <i class="fa-solid fa-toggle-on fa-flip-horizontal" style="color: #02295a;"></i>
     <span>yearly</span>
   </div>
+  </div>
   <div class="nav-buttons">
     <button class="back-button">Go back</button>
     <button class="next-step">Next Step</button>
-  </div>
   </div>
 </div>
 
   <!-- Step 2 end -->
 
   <!-- Step 3 start -->
+   <div class="steps" id="step-3">
+    <h1>Pick add-ons</h1>
+    <p>Add-ons help enhance your gaming experience.</p>
+    <div class="add-on-container">
+      <article class="add-on">
+        <input type="checkbox" name="online-service" id="online-checkmark">
+        <div>
+          <h2>Online service</h2>
+          <p>Access to multiplayer games</p>
+        </div>
+        <p class="add-on-pricing"> +$1/mo</p>
+      </article>
+      <article class="add-on">
+        <input type="checkbox" name="larger-storage" id="larger-checkmark">
+        <div>
+          <h2>Larger storage</h2>
+          <p>Extra 1TB of cloud save</p>
+        </div>
+        <p class="add-on-pricing"> +$2/mo</p>
+      </article>
+      <article class="add-on">
+        <input type="checkbox" name="customise-profile" id="customise-checkmark">
+        <div>
+          <h2>Customizable Profile</h2>
+          <p>Custom theme on your profile</p>
+        </div>
+        <p class="add-on-pricing">+$2/mo</p>
+      </article>
+    </div>
+    <div class="nav-buttons">
+      <button class="back-button">Go back</button>
+      <button class="next-step">Next Step</button>
+    </div>
+   </div>
 
-  Pick add-ons
-  Add-ons help enhance your gaming experience.
-
-  Online service
-  Access to multiplayer games
-  +$1/mo
-
-  Larger storage
-  Extra 1TB of cloud save
-  +$2/mo
-
-  Customizable Profile
-  Custom theme on your profile
-  +$2/mo
-
-  Go Back
-  Next Step
 
   <!-- Step 3 end -->
 
   <!-- Step 4 start -->
-
-  Finishing up
-  Double-check everything looks OK before confirming.
-
-  <!-- Dynamically add subscription and add-on selections here -->
-
-  Total (per month/year)
-
-  Go Back
-  Confirm
+<div class="steps" id="step-4">
+  <h1> Finishing up</h1>
+  <p>Double-check everything looks OK before confirming.</p>
+  <div class="selected-plans" id="summary">
+ <!-- Dynamically add subscription and add-on selections here -->
+  </div>
+    <p class="total">Total (per month/year) <span class="total-amount"></span></p>
+    <div class="nav-buttons">
+      <button class="back-button">Go back</button>
+      <button class="next-step">Next Step</button>
+    </div>
+</div>
 
   <!-- Step 4 end -->
 
   <!-- Step 5 start -->
+   <div class="success-container">
+    <img src="./assets/images/icon-thank-you.svg" alt="Thanks-img">
+     <h1>Thank you!</h1>
+     <p class="thanks-message">
+      Thanks for confirming your subscription! We hope you have fun 
+      using our platform. If you ever need support, please feel free 
+      to email us at support@loremgaming.com.
+     </p>
 
-  Thank you!
+   </div>
 
-  Thanks for confirming your subscription! We hope you have fun 
-  using our platform. If you ever need support, please feel free 
-  to email us at support@loremgaming.com.
+  
+
+ 
 
   <!-- Step 5 end -->
 </div>
