--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <script src="https://kit.fontawesome.com/83b1563528.js" crossorigin="anonymous"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Multi-step form</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,41 +18,43 @@
   </style>
 </head>
 <body>
+<main>
+  <div class="wrapper">
 
+  
   <!-- Sidebar start -->
 <div class="sidebar">
-  <div>
-    <div class="step-icon">
-
-    </div>
+  <picture>
+    <source media="(min-width:768px)" srcset="assets\images\bg-sidebar-desktop.svg">
+    <source media="(min-width:465px)" srcset="assets\images\bg-sidebar-mobile.svg">
+    <img src="assets\images\bg-sidebar-desktop.svg" alt="background picture">
+  </picture>
+  <div class="sidebar-content">
+  <div class="sidebar-wrapper">
+    <p class="number active">1</p>
     <div>
-      <span>Step 1</span><span>Your info</span>
+      <span class="step-number">Step 1</span><span class="step-title">Your info</span>
     </div>
   </div>
-  <div>
-    <div class="step-icon">
-
-    </div>
+  <div class="sidebar-wrapper">
+    <p class="number">2</p>
     <div>
-      <span>Step 2</span><span>Select plan</span>
+      <span class="step-number">Step 2</span><span class="step-title">Select plan</span>
     </div>
   </div>
-  <div>
-    <div class="step-icon">
-
-    </div>
+  <div class="sidebar-wrapper">
+    <p class="number">3</p>
     <div>
-      <span>Step 3</span><span>Add-ons</span>
+      <span class="step-number">Step 3</span><span class="step-title">Add-ons</span>
     </div>
   </div>
-  <div>
-    <div class="step-icon">
-
-    </div>
+  <div class="sidebar-wrapper">
+    <p class="number">4</p>
     <div>
-      <span>Step 4</span><span> Summary</span>
+      <span class="step-number">Step 4</span><span class="step-title"> Summary</span>
     </div>
   </div>
+</div>
 </div>
 
 
@@ -59,7 +64,7 @@
    
  
   <!-- Step 1 start -->
-<div class="steps" id="step-one">
+<div class="steps active" id="step-one">
   <h1>Personal info</h1>
   <p>Please provide your name, email address, and phone number.</p>
   <form action="">
@@ -77,7 +82,7 @@
   <!-- Step 1 end -->
 
   <!-- Step 2 start -->
-<div class="steps" id="step-2">
+<div class="steps inactive" id="step-2">
   <h1>Select your plan</h1>
   <p>You have the option of monthly or yearly billing.</p>
   <div class="user-plans">
@@ -113,7 +118,7 @@
   <!-- Step 2 end -->
 
   <!-- Step 3 start -->
-   <div class="steps" id="step-3">
+   <div class="steps inactive" id="step-3">
     <h1>Pick add-ons</h1>
     <p>Add-ons help enhance your gaming experience.</p>
     <div class="add-on-container">
@@ -152,7 +157,7 @@
   <!-- Step 3 end -->
 
   <!-- Step 4 start -->
-<div class="steps" id="step-4">
+<div class="steps inactive" id="step-4">
   <h1> Finishing up</h1>
   <p>Double-check everything looks OK before confirming.</p>
   <div class="selected-plans" id="summary">
@@ -168,7 +173,7 @@
   <!-- Step 4 end -->
 
   <!-- Step 5 start -->
-   <div class="success-container">
+   <div class="success-container inactive">
     <img src="./assets/images/icon-thank-you.svg" alt="Thanks-img">
      <h1>Thank you!</h1>
      <p class="thanks-message">
@@ -179,15 +184,16 @@
 
    </div>
 
-  
-
- 
 
   <!-- Step 5 end -->
 </div>
-  <div class="attribution">
+
+</div>
+</main>
+
+ <!--  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
