finished step 2-5 mobile designs

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
           <!-- Step 1 start -->
-          <div class="steps inactive step1" id="step-one">
+          <div class="steps active step1" id="step-one">
 
             <div class="steps-content">
             <h1 class="step-heading">Personal info</h1>
@@ -110,21 +110,27 @@
             <div class="user-plans">
               <article class="plans">
                 <img src="./assets/images/icon-arcade.svg" alt="Arcade icon">
+                <div>
                 <h2 class="plan-heading">Arcade</h2>
                 <p class="plan-pricing">$9/mo</p>
                 <p class="yearly-benefit"></p>
+              </div>
               </article>
               <article class="plans">
                 <img src="./assets/images/icon-advanced.svg" alt="Advanced icon">
+                <div>
                 <h2 class="plan-heading">Advanced</h2>
                 <p class="plan-pricing"> $12/mo</p>
                 <p class="yearly-benefit"></p>
+              </div>
               </article>
               <article class="plans">
                 <img src="./assets/images/icon-pro.svg" alt="Pro icon">
+                <div>
                 <h2 class="plan-heading">Pro</h2>
                 <p class="plan-pricing">$15/mo</p>
                 <p class="yearly-benefit"></p>
+              </div>
               </article>
 
             </div>
@@ -191,7 +197,7 @@
           <!-- Step 3 end -->
 
           <!-- Step 4 start -->
-          <div class="steps active step-four" id="step-4">
+          <div class="steps inactive step-four" id="step-4">
             <div class="steps-content">
             <h1 class="step-heading"> Finishing up</h1>
             <p class="heading-paragraph">Double-check everything looks OK before confirming.</p>
