finished mobile design

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
           <!-- Step 1 start -->
-          <div class="steps active step1" id="step-one">
+          <div class="steps inactive step1" id="step-one">
 
             <div class="steps-content">
             <h1 class="step-heading">Personal info</h1>
@@ -96,8 +96,9 @@
               </div>
             </form>
           </div>
+            <div  class="next-wrapper">
             <button type="button" class="next-step">Next Step</button>
-
+          </div>
           </div>
           <!-- Step 1 end -->
 
@@ -215,7 +216,7 @@
           <!-- Step 4 end -->
 
           <!-- Step 5 start -->
-          <div class=" inactive">
+          <div class=" active">
             <div class="steps-content success-container">
             <img src="./assets/images/icon-thank-you.svg" alt="Thanks-img">
             <h1 class="step-heading">Thank you!</h1>
