finished styling made buttons functional

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
           <!-- Step 1 start -->
-          <div class="steps inactive step1" id="step-one">
+          <div class="steps active step1" id="step-one">
 
             <div class="steps-content">
             <h1 class="step-heading">Personal info</h1>
@@ -216,7 +216,7 @@
           <!-- Step 4 end -->
 
           <!-- Step 5 start -->
-          <div class=" active">
+          <div class=" inactive steps thanks-container">
             <div class="steps-content success-container">
             <img src="./assets/images/icon-thank-you.svg" alt="Thanks-img">
             <h1 class="step-heading">Thank you!</h1>
@@ -240,6 +240,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
+  <script src="script.js"></script>
 </body>
 
 </html>
