add functionality to step 2 to 4

--- a/index.html
+++ b/index.html
@@ -109,36 +109,36 @@
             <h1 class="step-heading">Select your plan</h1>
             <p class="heading-paragraph">You have the option of monthly or yearly billing.</p>
             <div class="user-plans">
-              <article class="plans">
+              <button class="plans" id="9">
                 <img src="./assets/images/icon-arcade.svg" alt="Arcade icon">
                 <div>
                 <h2 class="plan-heading">Arcade</h2>
                 <p class="plan-pricing">$9/mo</p>
                 <p class="yearly-benefit"></p>
               </div>
-              </article>
-              <article class="plans">
+            </button>
+              <button class="plans" id="12">
                 <img src="./assets/images/icon-advanced.svg" alt="Advanced icon">
                 <div>
                 <h2 class="plan-heading">Advanced</h2>
-                <p class="plan-pricing"> $12/mo</p>
+                <p class="plan-pricing">$12/mo</p>
                 <p class="yearly-benefit"></p>
               </div>
-              </article>
-              <article class="plans">
+              </button>
+              <button class="plans" id="15">
                 <img src="./assets/images/icon-pro.svg" alt="Pro icon">
                 <div>
                 <h2 class="plan-heading">Pro</h2>
                 <p class="plan-pricing">$15/mo</p>
                 <p class="yearly-benefit"></p>
               </div>
-              </article>
+              </button>
 
             </div>
             <div class="plan-frequency"><span class="active">Monthly</span>
               <!-- <img src="./assets/images/togglemonthly.svg"> -->
-              <i class="fa-solid fa-toggle-on fa-flip-horizontal fa-2xl" style="color: #02295a"
-                id="frequency-toggle"></i>
+              <button id="frequency-toggle"><i class="fa-solid fa-toggle-on fa-flip-horizontal fa-2xl" style="color: #02295a"
+                ></i></button>
               <span>yearly</span>
             </div>
           </div>
@@ -157,7 +157,7 @@
             <p class="heading-paragraph">Add-ons help enhance your gaming experience.</p>
             <div class="add-on-container">
               <article class="add-on">
-                <label class="checkbox-container"><input type="checkbox" name="online-service" id="online-checkmark">
+                <label class="checkbox-container"><input type="checkbox" name="online-service" id="1" class="add-on-checkbox">
                   <span class="checkmark"><img src="./assets/images/icon-checkmark.svg"></span></label>
 
                 <div>
@@ -167,7 +167,7 @@
                 <p class="add-on-pricing"> +$1/mo</p>
               </article>
               <article class="add-on">
-                <label class="checkbox-container"><input type="checkbox" name="larger-storage" id="larger-checkmark">
+                <label class="checkbox-container"><input type="checkbox" name="larger-storage" id="2" class="add-on-checkbox">
                   <span class="checkmark"><img src="./assets/images/icon-checkmark.svg"></span></label>
             
                 <div>
@@ -177,7 +177,7 @@
                 <p class="add-on-pricing"> +$2/mo</p>
               </article>
               <article class="add-on">
-                <label class="checkbox-container"><input type="checkbox" name="customise-profile" id="customise-checkmark">
+                <label class="checkbox-container"><input type="checkbox" name="customise-profile" id="2.0" class="add-on-checkbox">
                   <span class="checkmark"><img src="./assets/images/icon-checkmark.svg"></span></label>
                
                 <div>
