completed selection summary class, remaining validation messages

--- a/index.html
+++ b/index.html
@@ -204,8 +204,11 @@
             <p class="heading-paragraph">Double-check everything looks OK before confirming.</p>
             <div class="selected-plans" id="summary">
               <!-- Dynamically add subscription and add-on selections here -->
+               <!--  <div id="summary-addons"></div>  -->
             </div>
-            <p class="total">Total (per <span id="selected-frequency">month</span>) <span class="total-amount"></span></p>
+            <div class="total"><p>Total (per <span id="selected-frequency"></span>)</p> <p id="total-amount">
+
+            </p></div>
           </div>
             <div class="nav-buttons">
               <button class="back-button">Go back</button>
