added form validations

--- a/index.html
+++ b/index.html
@@ -83,16 +83,20 @@
             <p class="heading-paragraph">Please provide your name, email address, and phone number.</p>
             <form action="">
               <div>
-                <label for="user-name">Name</label>
-                <input id="user-name" type="text" placeholder=" e.g. Stephen King">
+                <label for="user-name">Name </p></label>
+                <input id="user-name" type="text" placeholder=" e.g. Stephen King" required>
+                <p id="name-error" style="font-size: 0.8em; color: red; font-weight:700;"></p>
               </div>
               <div>
-                <label for="email">Email Address</label>
-                <input id="email" type="email" placeholder="e.g. stephenking@lorem.com">
+                <label for="email" >Email Address </p></label>
+                <input id="email" type="email" placeholder="e.g. stephenking@lorem.com" required>
+                <p id="email-error" style="font-size: 0.8em; color: red; font-weight:700;"></p>
               </div>
               <div>
                 <label for="phone-number">Phone Number</label>
-                <input type="tel" id="phone-number" placeholder=" e.g. +1 234 567 890">
+                <input type="tel" id="phone-number" placeholder=" e.g. +1 234 567 890" minlength="7"
+                maxlength="15" required>
+                <p id="phone-error" style="font-size: 0.8em; color: red; font-weight:700;"></p>
               </div>
             </form>
           </div>
@@ -108,6 +112,7 @@
             <div class="steps-content">
             <h1 class="step-heading">Select your plan</h1>
             <p class="heading-paragraph">You have the option of monthly or yearly billing.</p>
+            <p id="selection-error" style="font-size: 0.8em; color: red; font-weight:700;"></p>
             <div class="user-plans">
               <button class="plans" id="9">
                 <img src="./assets/images/icon-arcade.svg" alt="Arcade icon">
