added hover states to the buttons

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div>
                 <h2 class="plan-heading">Arcade</h2>
                 <p class="plan-pricing">$9/mo</p>
-                <p class="yearly-benefit"></p>
+                <p class="yearly-benefit inactive">2 months free</p>
               </div>
             </button>
               <button class="plans" id="12">
@@ -127,7 +127,7 @@
                 <div>
                 <h2 class="plan-heading">Advanced</h2>
                 <p class="plan-pricing">$12/mo</p>
-                <p class="yearly-benefit"></p>
+                <p class="yearly-benefit inactive">2 months free</p>
               </div>
               </button>
               <button class="plans" id="15">
@@ -135,7 +135,7 @@
                 <div>
                 <h2 class="plan-heading">Pro</h2>
                 <p class="plan-pricing">$15/mo</p>
-                <p class="yearly-benefit"></p>
+                <p class="yearly-benefit inactive">2 months free</p>
               </div>
               </button>
 
@@ -217,7 +217,7 @@
           </div>
             <div class="nav-buttons">
               <button class="back-button">Go back</button>
-              <button class="next-step">Next Step</button>
+              <button class="next-step" style="background-color: hsl(243, 100%, 62%);">Confirm</button>
             </div>
           </div>
 
