--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <!-- Sidebar start -->
         <div class="sidebar">
           <picture>
-            <source media="(min-width:768px)" srcset="assets\images\bg-sidebar-desktop.svg">
-            <source media="(max-width:768px)" srcset="assets\images\bg-sidebar-mobile.svg">
-            <img src="assets\images\bg-sidebar-desktop.svg" alt="background picture">
+            <source media="(min-width:768px)" srcset="assets/images/bg-sidebar-desktop.svg">
+            <source media="(max-width:768px)" srcset="assets/images/bg-sidebar-mobile.svg">
+            <img src="assets/images/bg-sidebar-desktop.svg" alt="background picture">
           </picture>
           <div class="sidebar-content">
             <div class="sidebar-wrapper">
@@ -81,14 +81,14 @@
             <div class="steps-content">
             <h1 class="step-heading">Personal info</h1>
             <p class="heading-paragraph">Please provide your name, email address, and phone number.</p>
-            <form action="">
+            <form>
               <div>
-                <label for="user-name">Name </p></label>
+                <label for="user-name">Name</label>
                 <input id="user-name" type="text" placeholder=" e.g. Stephen King" required>
                 <p id="name-error" style="font-size: 0.8em; color: red; font-weight:700;"></p>
               </div>
               <div>
-                <label for="email" >Email Address </p></label>
+                <label for="email" >Email Address</label>
                 <input id="email" type="email" placeholder="e.g. stephenking@lorem.com" required>
                 <p id="email-error" style="font-size: 0.8em; color: red; font-weight:700;"></p>
               </div>
@@ -163,7 +163,7 @@
             <div class="add-on-container">
               <article class="add-on">
                 <label class="checkbox-container"><input type="checkbox" name="online-service" id="1" class="add-on-checkbox">
-                  <span class="checkmark"><img src="./assets/images/icon-checkmark.svg"></span></label>
+                  <span class="checkmark"><img src="./assets/images/icon-checkmark.svg" alt="checkmark"></span></label>
 
                 <div>
                   <h2>Online service</h2>
@@ -173,7 +173,7 @@
               </article>
               <article class="add-on">
                 <label class="checkbox-container"><input type="checkbox" name="larger-storage" id="2" class="add-on-checkbox">
-                  <span class="checkmark"><img src="./assets/images/icon-checkmark.svg"></span></label>
+                  <span class="checkmark"><img src="./assets/images/icon-checkmark.svg" alt="checkmark"></span></label>
             
                 <div>
                   <h2>Larger storage</h2>
@@ -183,7 +183,7 @@
               </article>
               <article class="add-on">
                 <label class="checkbox-container"><input type="checkbox" name="customise-profile" id="2.0" class="add-on-checkbox">
-                  <span class="checkmark"><img src="./assets/images/icon-checkmark.svg"></span></label>
+                  <span class="checkmark"><img src="./assets/images/icon-checkmark.svg" alt="checkmark"></span></label>
                
                 <div>
                   <h2>Customizable Profile</h2>
